# TauriScapes

./: .eslintrc.cjs  .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-19-dependency-upgrade.md
docs/superpowers/specs/: 2026-05-19-dependency-upgrade-design.md
src/: app.vue  index.d.ts  main.ts
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: api.rs  command.rs  config.rs  cron.rs  main.rs  scheduler.rs  tray.rs  worker.rs
src/components/: auto-resize.vue  icon.vue  menu.vue  tabbar.vue
src/hooks/: updater.ts
src/models/: config.ts  image.ts
src/router/: index.ts
src/stores/: auth.ts  settings.ts  updater.ts
src/styles/: global.scss  tailwind.css
src/utils/: autostart.ts  request.ts
src/views/home/: index.vue
src/views/settings/: index.vue
