[package]
name = "TauriScapes"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
chrono = "0.4.24"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=1.6", features = [ "http-all", "macos-private-api", "shell-open", "system-tray"] }
window-vibrancy = "=0.4.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tauri-plugin-positioner = { version = "=1.0.4", features = ["system-tray"] }
wallpaper = { version = "3.2.0", features = ["from_url"] }
image = "0.24.9"
toml = "0.8.10"
tokio = { version = "1.36.0", features = ["full", "time"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
